# TBIMH-GPT

./: README.md  README_TBIMH-GPT.md  pyproject.toml
stage1/: mm_utils.py
stage1/model/: llava_arch.py
stage1/model/language_model/: llava_mpt.py
stage1/scripts/: train_stage1_alignment.sh  train_stage1_med_instruct.sh  train_stage1_med_qa.sh
stage2/: mm_utils.py
stage2/model/: apply_delta.py  builder.py  consolidate.py  make_delta.py
stage2/models/: ppo_trainer.py  qlora_model.py  reward_model.py  rl_trainer.py
stage2/scripts/: initialize_policy_model.sh  train_ppo_tbimh.sh  train_reward_model.sh
stage2/train/: finetune_lora_ppo.py  finetune_lora_rm.py  finetune_lora_sft_ds.py  train.py
